--- a/index.html
+++ b/index.html
@@ -5,14 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/tic-tac-toe.png"
+      type="image/png"
+    />
   </head>
   <body>
+    <div class="intro">
+      <h1>Tic Tac Toe Game</h1>
+      <h3>Choose first player</h3>
+      <div>
+        <button class="btn choice-x">Player X</button>
+        <button class="btn choice-o">Player O</button>
+      </div>
+    </div>
     <main>
-      <div class="game-board"></div>
+      <div class="game-board">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
       <div class="players">
         <div class="player-1">
           <h1>Player X</h1>
-          <p class="active">0</p>
+          <p>0</p>
         </div>
         <div class="draw">
           <h1>Draw</h1>
